frontend/k8s/frontend.deployment.yml
kind: Deployment    
apiVersion: apps/v1   
metadata:            
  name: frontend-deployment    
  namespace: s3-api
  labels:        
    app: frontend    
spec:            
  replicas: 1    
  selector:       
    matchLabels: 
      app: frontend
  template:        
    metadata:    
      labels:    
        app: frontend
    spec:        
      containers:    
      - name: frontend
        image: gitlab.local:5050/anthonybudd/frontend:master
        imagePullPolicy: Always    
        ports:
          - containerPort: 80
