frontend/k8s/frontend-ssl.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: s3-api
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
  - hosts:
    - s3.anthonybudd.io
    secretName: s3-anthonybudd-io-cert
  rules:
  - host: s3.anthonybudd.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
