frontend/k8s/frontend.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: s3-api
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: s3-app.anthonybudd.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
